Fix category container spacing

--- a/assets/_less/application.less
+++ b/assets/_less/application.less
@@ -20,10 +20,11 @@ body {
 	img {
 		height: 40px;
 		margin-right: 5px;
+		margin-top: -2px;
 	}
 
 	.navbar-brand {
-		padding: 5px 15px 0;
+		padding: 7px 15px 0;
 		text-transform: lowercase;
 		font-weight: 300;
 		font-size: @font-size-base*1.4;
@@ -155,7 +156,7 @@ body {
 	#toggle-all {
 		position: absolute;
 		top: 25px;
-		right: 0;
+		right: 15px;
 
 		@media (max-width: @screen-xs-max){
 			top: 70px;
